# li1_project

./: 2022li1g035.cabal  README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
doc/html/: Tarefa2_2022li1g035.html  Tarefa3_2022li1g035.html  doc-index.html
src/: Main.hs  Tarefa1_2022li1g035.hs  Tarefa2_2022li1g035.hs  Tarefa3_2022li1g035.hs  Tarefa4_2022li1g035.hs  Tarefa5_2022li1g035.hs  Tarefa6_2022li1g035.hs
tests/: Fase1.hs  Spec.hs  Tarefa1_2022li1g035_Spec.hs  Tarefa2_2022li1g035_Spec.hs  Tarefa3_2022li1g035_Spec.hs  Tarefa4_2022li1g035_Spec.hs  Tarefa5_2022li1g035_Spec.hs
