cabal-version:      2.4
name:               2022li1g035
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             José António Costa Soares <a103995@alunos.uminho.pt>
                    Nuno Miguel Parente Morais <a104090@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g035
    Tarefa2_2022li1g035
    Tarefa3_2022li1g035
    Tarefa4_2022li1g035
    Tarefa5_2022li1g035
    Tarefa6_2022li1g035
  build-depends:    base ^>=4.16.3.0, random
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g035
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g035
    Tarefa2_2022li1g035
    Tarefa3_2022li1g035
    Tarefa4_2022li1g035
    Tarefa5_2022li1g035
    Tarefa6_2022li1g035
  build-depends:    base ^>=4.16.3.0, random
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g035-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g035
    Tarefa2_2022li1g035
    Tarefa3_2022li1g035
    Tarefa4_2022li1g035
    Tarefa5_2022li1g035
    Tarefa6_2022li1g035
    Tarefa1_2022li1g035_Spec
    Tarefa2_2022li1g035_Spec
    Tarefa3_2022li1g035_Spec
    Tarefa4_2022li1g035_Spec
    Tarefa5_2022li1g035_Spec
  build-depends:        base ^>=4.16.3.0, HUnit, random 
  hs-source-dirs:       tests src
  default-language:     Haskell2010
